<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user_black"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_orderhistory"
            android:icon="@drawable/ic_clock"
            android:title="@string/menu_orderhistory" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/ic_phone"
            android:title="@string/menu_contactus" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
