<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hav.cigar.driver.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home" />
    </fragment>
<!--    <fragment-->
<!--        android:id="@+id/nav_home_second"-->
<!--        android:name="com.hav.cigar.driver.ui.home.HomeSecondFragment"-->
<!--        android:label="@string/home_second"-->
<!--        tools:layout="@layout/fragment_home_second">-->
<!--        <action-->
<!--            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"-->
<!--            app:destination="@id/nav_home" />-->

<!--        <argument-->
<!--            android:name="myArg"-->
<!--            app:argType="string" />-->
<!--    </fragment>-->

    <fragment
        android:id="@+id/nav_orderhistory"
        android:name="com.hav.cigar.driver.ui.order.OrderFragment"
        android:label="@string/menu_orderhistory"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.hav.cigar.driver.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.hav.cigar.driver.ui.contactus.ContactUsFragment"
        android:label="@string/menu_contactus"
        tools:layout="@layout/fragment_contact_us" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.hav.cigar.driver.ui.help.HelpandFeedback"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_helpand_feedback" />
</navigation>